# PAT

./: B_1003.cpp  B_1004.cpp  B_1005.cpp  B_1006.cpp  B_1007.cpp  B_1008.cpp  B_1010.cpp  B_1011.cpp  B_1012.cpp  B_1013.cpp  B_1014.cpp  B_1016.cpp  B_1017.cpp  B_1018.cpp  B_1019.cpp  B_1020.cpp  B_1023.cpp  CMakeLists.txt
