cmake_minimum_required(VERSION 3.15)
project(Algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(main main.cpp)
add_executable(B_1003 B_1003.cpp)
add_executable(B_1004 B_1004.cpp)
add_executable(B_1005 B_1005.cpp)
add_executable(B_1006 B_1006.cpp)
add_executable(B_1007 B_1007.cpp)
add_executable(B_1008 B_1008.cpp)
add_executable(B_1010 B_1010.cpp)