cmake_minimum_required(VERSION 3.15)
project(Algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(main main.cpp)
add_executable(B_1003 B_1003.cpp)
add_executable(B_1004 B_1004.cpp)
add_executable(B_1005 B_1005.cpp)
add_executable(B_1006 B_1006.cpp)
add_executable(B_1007 B_1007.cpp)
add_executable(B_1008 B_1008.cpp)
add_executable(B_1010 B_1010.cpp)
add_executable(B_1011 B_1011.cpp)
add_executable(B_1012 B_1012.cpp)
add_executable(B_1013 B_1013.cpp)
add_executable(B_1014 B_1014.cpp)
add_executable(B_1016 B_1016.cpp)
add_executable(B_1017 B_1017.cpp)
add_executable(B_1018 B_1018.cpp)
add_executable(B_1023 B_1023.cpp)
